# luiza-labs-flask-api

./: .gitignore  Dockerfile  README.md  dev-requirements.txt  docker-compose.yml  pylintrc  requirements.txt  setup.cfg  test-requirements.txt
src/: server.py
src/app/: config.py
src/app/models/: __init__.py  base.py  employee.py
src/app/repositories/: employee_repository.py
src/app/routes/: employee.py  health.py
src/test/integration/: test_employee.py
