[tool:pytest]
addopts = -s -p no:warnings

[options.extras_require]
dev = 
	autopep8~=1.4.4
	pylint~=2.3.1
testing = 
	pytest-flask~=0.15.0
	pytest-sugar~=0.9.2
	pytest~=5.0.1

[options]
install_requires = 
	flask-compress~=1.4.0
	flask-cors~=3.0.8
	flask-sqlalchemy~=2.4.0
	flask-talisman~=0.7.0
	flask_marshmallow~=0.10.1
	flask~=1.1.1
	marshmallow-sqlalchemy~=0.17.0
	pymysql~=0.9.3

